--- a/GTA5_version1.0/css/main.css
+++ b/GTA5_version1.0/css/main.css
@@ -195,3 +195,17 @@ h1, h2, h3, h4, h5 ,h6{
 	height:62px;
 	overflow:hidden;
 }
+
+.content-Item a:link,.content-Item a:visited {
+    display:block;
+    width: 100%;
+    color:#FFFFFF;
+    background-color:rgba(255,255,255,0.2);
+    text-align:center;
+    padding:4px;
+    text-decoration:none;
+    text-transform:uppercase;
+}
+.content-Item a:hover,.content-Item a:active {
+    background-color:rgba(255,255,255,0.4);
+}
